# ssh-sync

./: AGENT.md  README.md  config.yaml.example  install.sh  pyproject.toml  requirements.txt
sshsync/: __init__.py  cli.py  config.py  diff_engine.py  metadata.py  scanner.py  ssh_connection.py  sync_engine.py  transfer.py  utils.py
