[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-sync"
version = "0.1.0"
description = "Bidirectional file synchronization over SSH/SFTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paramiko>=3.4.0",
  "typer>=0.12.3",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
]

[project.scripts]
ssh-sync = "sshsync.cli:run"

[tool.setuptools]
packages = ["sshsync"]
